// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hero customization page renders the hero customization page when instance all its dependencies are set up 1`] = `
<div
  className="console-page"
>
  <div
    className="d-flex justify-content-center align-middle email-activation-alert"
  >
    <i
      className="alert-icon fas fa-exclamation-triangle fa-xs"
    />
    One of your email addresses is pending confirmation. Please confirm it to begin managing your Open edX instance.
  </div>
  <div
    className="new-console-page-container"
  >
    <div
      className="new-console-page-content row"
    >
      <div
        className="pr-4 pl-0 container-fluid"
      >
        <div
          className="justify-content-center m-0 row"
        >
          <div
            className="p-0 m-0 pl-4 col-md-3"
          >
            <div
              className="ml-auto nav"
              onKeyDown={[Function]}
            >
              <div
                className="nav-item"
              >
                <a
                  className="nav-link px-0"
                  href="/console"
                  onClick={[Function]}
                >
                  <span>
                    <i
                      aria-hidden="true"
                      className="fa fa-angle-left sm"
                    />
                  </span>
                  <span
                    className="back-button"
                  >
                    Back
                  </span>
                </a>
              </div>
            </div>
            <div
              className="hero-page"
            />
          </div>
          <div
            className="pr-0 col-md-9"
          >
            <div
              className="m-0 row"
            >
              <div
                className="p-0 col-md-4"
              >
                <div
                  className="preview-header d-flex justify-content-start"
                >
                  <div
                    className="dropdown-container d-flex flex-column align-items-center"
                  >
                    <a
                      className="nav-link"
                      href="#"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      role="button"
                    >
                      Dashboard
                      <i
                        className="fas xs fa-chevron-down"
                      />
                    </a>
                    <span
                      className="fill-line"
                    />
                    <div
                      className="dropdown-items align-items-center"
                    >
                      <div
                        className="content d-flex flex-column"
                      >
                        <div
                          aria-expanded={null}
                          className="collapse"
                        >
                          <button
                            className="d-inline-block"
                            onClick={[Function]}
                            type="button"
                          >
                            <p>
                              Dashboard
                            </p>
                          </button>
                          <button
                            className="d-inline-block"
                            onClick={[Function]}
                            type="button"
                          >
                            <p>
                              Course Outline
                            </p>
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="p-0 align-items-start col-md-8"
              >
                <div
                  className="notice-container d-flex justify-content-end"
                >
                  This is only a preview. Publish changes to update the live site
                </div>
              </div>
              <div
                className="w-100 preview-box card"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Hero customization page renders the hero customization page when instance does not have the theme set up 1`] = `
<div
  className="console-page"
>
  <div
    className="d-flex justify-content-center align-middle email-activation-alert"
  >
    <i
      className="alert-icon fas fa-exclamation-triangle fa-xs"
    />
    One of your email addresses is pending confirmation. Please confirm it to begin managing your Open edX instance.
  </div>
  <div
    className="new-console-page-container"
  >
    <div
      className="new-console-page-content row"
    >
      <div
        className="pr-4 pl-0 container-fluid"
      >
        <div
          className="justify-content-center m-0 row"
        >
          <div
            className="p-0 m-0 pl-4 col-md-3"
          >
            <div
              className="ml-auto nav"
              onKeyDown={[Function]}
            >
              <div
                className="nav-item"
              >
                <a
                  className="nav-link px-0"
                  href="/console"
                  onClick={[Function]}
                >
                  <span>
                    <i
                      aria-hidden="true"
                      className="fa fa-angle-left sm"
                    />
                  </span>
                  <span
                    className="back-button"
                  >
                    Back
                  </span>
                </a>
              </div>
            </div>
            <div
              className="hero-page"
            />
          </div>
          <div
            className="pr-0 col-md-9"
          >
            <div
              className="m-0 row"
            >
              <div
                className="p-0 col-md-4"
              >
                <div
                  className="preview-header d-flex justify-content-start"
                >
                  <div
                    className="dropdown-container d-flex flex-column align-items-center"
                  >
                    <a
                      className="nav-link"
                      href="#"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      role="button"
                    >
                      Dashboard
                      <i
                        className="fas xs fa-chevron-down"
                      />
                    </a>
                    <span
                      className="fill-line"
                    />
                    <div
                      className="dropdown-items align-items-center"
                    >
                      <div
                        className="content d-flex flex-column"
                      >
                        <div
                          aria-expanded={null}
                          className="collapse"
                        >
                          <button
                            className="d-inline-block"
                            onClick={[Function]}
                            type="button"
                          >
                            <p>
                              Dashboard
                            </p>
                          </button>
                          <button
                            className="d-inline-block"
                            onClick={[Function]}
                            type="button"
                          >
                            <p>
                              Course Outline
                            </p>
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="p-0 align-items-start col-md-8"
              >
                <div
                  className="notice-container d-flex justify-content-end"
                >
                  This is only a preview. Publish changes to update the live site
                </div>
              </div>
              <div
                className="w-100 preview-box card"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Hero customization page renders the hero customization page when the instance does not have the cover image set up 1`] = `
<div
  className="console-page"
>
  <div
    className="d-flex justify-content-center align-middle email-activation-alert"
  >
    <i
      className="alert-icon fas fa-exclamation-triangle fa-xs"
    />
    One of your email addresses is pending confirmation. Please confirm it to begin managing your Open edX instance.
  </div>
  <div
    className="new-console-page-container"
  >
    <div
      className="new-console-page-content row"
    >
      <div
        className="pr-4 pl-0 container-fluid"
      >
        <div
          className="justify-content-center m-0 row"
        >
          <div
            className="p-0 m-0 pl-4 col-md-3"
          >
            <div
              className="ml-auto nav"
              onKeyDown={[Function]}
            >
              <div
                className="nav-item"
              >
                <a
                  className="nav-link px-0"
                  href="/console"
                  onClick={[Function]}
                >
                  <span>
                    <i
                      aria-hidden="true"
                      className="fa fa-angle-left sm"
                    />
                  </span>
                  <span
                    className="back-button"
                  >
                    Back
                  </span>
                </a>
              </div>
            </div>
            <div
              className="hero-page"
            />
          </div>
          <div
            className="pr-0 col-md-9"
          >
            <div
              className="m-0 row"
            >
              <div
                className="p-0 col-md-4"
              >
                <div
                  className="preview-header d-flex justify-content-start"
                >
                  <div
                    className="dropdown-container d-flex flex-column align-items-center"
                  >
                    <a
                      className="nav-link"
                      href="#"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      role="button"
                    >
                      Dashboard
                      <i
                        className="fas xs fa-chevron-down"
                      />
                    </a>
                    <span
                      className="fill-line"
                    />
                    <div
                      className="dropdown-items align-items-center"
                    >
                      <div
                        className="content d-flex flex-column"
                      >
                        <div
                          aria-expanded={null}
                          className="collapse"
                        >
                          <button
                            className="d-inline-block"
                            onClick={[Function]}
                            type="button"
                          >
                            <p>
                              Dashboard
                            </p>
                          </button>
                          <button
                            className="d-inline-block"
                            onClick={[Function]}
                            type="button"
                          >
                            <p>
                              Course Outline
                            </p>
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="p-0 align-items-start col-md-8"
              >
                <div
                  className="notice-container d-flex justify-content-end"
                >
                  This is only a preview. Publish changes to update the live site
                </div>
              </div>
              <div
                className="w-100 preview-box card"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Hero customization page renders the hero customization page when the instance does not have the static content overrides set up 1`] = `
<div
  className="console-page"
>
  <div
    className="d-flex justify-content-center align-middle email-activation-alert"
  >
    <i
      className="alert-icon fas fa-exclamation-triangle fa-xs"
    />
    One of your email addresses is pending confirmation. Please confirm it to begin managing your Open edX instance.
  </div>
  <div
    className="new-console-page-container"
  >
    <div
      className="new-console-page-content row"
    >
      <div
        className="pr-4 pl-0 container-fluid"
      >
        <div
          className="justify-content-center m-0 row"
        >
          <div
            className="p-0 m-0 pl-4 col-md-3"
          >
            <div
              className="ml-auto nav"
              onKeyDown={[Function]}
            >
              <div
                className="nav-item"
              >
                <a
                  className="nav-link px-0"
                  href="/console"
                  onClick={[Function]}
                >
                  <span>
                    <i
                      aria-hidden="true"
                      className="fa fa-angle-left sm"
                    />
                  </span>
                  <span
                    className="back-button"
                  >
                    Back
                  </span>
                </a>
              </div>
            </div>
            <div
              className="hero-page"
            />
          </div>
          <div
            className="pr-0 col-md-9"
          >
            <div
              className="m-0 row"
            >
              <div
                className="p-0 col-md-4"
              >
                <div
                  className="preview-header d-flex justify-content-start"
                >
                  <div
                    className="dropdown-container d-flex flex-column align-items-center"
                  >
                    <a
                      className="nav-link"
                      href="#"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      role="button"
                    >
                      Dashboard
                      <i
                        className="fas xs fa-chevron-down"
                      />
                    </a>
                    <span
                      className="fill-line"
                    />
                    <div
                      className="dropdown-items align-items-center"
                    >
                      <div
                        className="content d-flex flex-column"
                      >
                        <div
                          aria-expanded={null}
                          className="collapse"
                        >
                          <button
                            className="d-inline-block"
                            onClick={[Function]}
                            type="button"
                          >
                            <p>
                              Dashboard
                            </p>
                          </button>
                          <button
                            className="d-inline-block"
                            onClick={[Function]}
                            type="button"
                          >
                            <p>
                              Course Outline
                            </p>
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="p-0 align-items-start col-md-8"
              >
                <div
                  className="notice-container d-flex justify-content-end"
                >
                  This is only a preview. Publish changes to update the live site
                </div>
              </div>
              <div
                className="w-100 preview-box card"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Hero customization page renders without crashing 1`] = `
<div
  className="console-page"
>
  <div
    className="d-flex justify-content-between redeployment-toolbar px-4 py-3 container-fluid"
  >
    <div
      className="d-flex flex-row justify-content-between w-100"
    >
      <span
        className="status-pill badge badge-pill badge-primary"
        style={
          Object {
            "backgroundColor": "grey",
          }
        }
      >
        <div
          className="text"
        >
          Loading
        </div>
        <i
          className="fas fa-question-circle fa-lg"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        />
      </span>
      <button
        className="float-right btn-disabled btn btn-primary btn-lg"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <div
          className="button-text-layer"
        >
          Publish changes
        </div>
      </button>
    </div>
    <div
      className="toast-container"
    />
  </div>
  <div
    className="new-console-page-container"
  >
    <div
      className="new-console-page-content row"
    >
      <div
        className="pr-4 pl-0 container-fluid"
      >
        <div
          className="justify-content-center m-0 row"
        >
          <div
            className="p-0 m-0 pl-4 col-md-3"
          >
            <div
              className="ml-auto nav"
              onKeyDown={[Function]}
            >
              <div
                className="nav-item"
              >
                <a
                  className="nav-link px-0"
                  href="/console"
                  onClick={[Function]}
                >
                  <span>
                    <i
                      aria-hidden="true"
                      className="fa fa-angle-left sm"
                    />
                  </span>
                  <span
                    className="back-button"
                  >
                    Back
                  </span>
                </a>
              </div>
            </div>
            <div
              className="hero-page"
            />
          </div>
          <div
            className="pr-0 col-md-9"
          >
            <div
              className="m-0 row"
            >
              <div
                className="p-0 col-md-4"
              >
                <div
                  className="preview-header d-flex justify-content-start"
                >
                  <div
                    className="dropdown-container d-flex flex-column align-items-center"
                  >
                    <a
                      className="nav-link"
                      href="#"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      role="button"
                    >
                      Dashboard
                      <i
                        className="fas xs fa-chevron-down"
                      />
                    </a>
                    <span
                      className="fill-line"
                    />
                    <div
                      className="dropdown-items align-items-center"
                    >
                      <div
                        className="content d-flex flex-column"
                      >
                        <div
                          aria-expanded={null}
                          className="collapse"
                        >
                          <button
                            className="d-inline-block"
                            onClick={[Function]}
                            type="button"
                          >
                            <p>
                              Dashboard
                            </p>
                          </button>
                          <button
                            className="d-inline-block"
                            onClick={[Function]}
                            type="button"
                          >
                            <p>
                              Course Outline
                            </p>
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="p-0 align-items-start col-md-8"
              >
                <div
                  className="notice-container d-flex justify-content-end"
                >
                  This is only a preview. Publish changes to update the live site
                </div>
              </div>
              <div
                className="w-100 preview-box card"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
